src/assets/main.css
@import './base.css';

#app {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  justify-items: center;
  max-width: 1280px;
  margin: 0 auto;
  min-height: 100vh;
  padding: 4rem 2rem 2rem;
  font-weight: normal;

  @media (min-width: 768px) {
    justify-content: center;
    padding-top: 2rem;
  }
}

a,
.green {
  text-decoration: none;
  color: hsla(160, 100%, 37%, 1);
  transition: 0.4s;
  padding: 3px;
}

@media (hover: hover) {
  a:hover {
    background-color: hsla(160, 100%, 37%, 0.2);
  }
}

@media (min-width: 1440px) {
  body {
    display: flex;
    place-items: center;
  }

  #app {
    display: grid;
    grid-template-columns: 1fr 1fr;
    max-width: 1920px;
    padding: 0 2rem;
  }
}

/*
  https://getcssscan.com/css-buttons-examples Button 55, modified slightly
*/
button {
  align-self: center;
  background-color: var(--vt-c-green-light);
  background-image: none;
  background-position: 0 90%;
  background-repeat: repeat no-repeat;
  background-size: 4px 3px;
  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
  border-style: solid;
  border-width: 2px;
  box-shadow: rgba(0, 0, 0, 0.2) 15px 28px 25px -18px;
  box-sizing: border-box;
  color: #41403e;
  cursor: pointer;
  display: inline-block;
  font-family: Neucha, sans-serif;
  font-size: 1rem;
  height: 30px;
  line-height: 15px;
  outline: none;
  padding: 0.45rem;
  text-decoration: none;
  transition: all 135ms ease-in-out;
  border-bottom-left-radius: 15px 255px;
  border-bottom-right-radius: 225px 15px;
  border-top-left-radius: 255px 15px;
  border-top-right-radius: 15px 225px;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;

  &:hover {
    background-color: var(--vt-c-green);
    box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px -5px;
  }

  &:focus {
    box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
  }

  &:disabled,
  &:disabled:hover,
  &:disabled:focus {
    background-color: #ccc;
    border-color: var(--vt-c-gray);
    box-shadow: none;
    color: #777;
    cursor: default;
  }
}

strong {
  font-weight: 700;
}

